corpus/let-in.txt
=====================================
let-in statement
=====================================

let
a = 1;
in
a

---

(source_file
 (expr (expr_let_in (binding (identifier) (expr (expr_simple (integer))))
                    (expr (expr_simple (identifier))))))
