corpus/strings.txt
=====================================
Double quoted strings
=====================================

"hi"

---

(source_file
 (expr (expr_simple (string_double_quoted))))

=====================================
Double quoted string with interpolated expression
=====================================

"hi ${1}"

---

(source_file
 (expr (expr_simple (string_double_quoted
                     (string_interp (expr (expr_simple (integer))))))))

=====================================
Double quoted string with shell vars
=====================================

"hi $1"

---

(source_file
 (expr (expr_simple (string_double_quoted))))

=====================================
Two quotes strings
=====================================

''hi''

---

(source_file
 (expr (expr_simple (string_two_quotes))))

=====================================
Two quotes strings interp
=====================================

''hi ${"bob"}''

---

(source_file
 (expr (expr_simple (string_two_quotes
                     (string_interp (expr (expr_simple (string_double_quoted))))))))

=====================================
Two quotes strings with shell vars
=====================================

''hi $bob''

---

(source_file
 (expr (expr_simple (string_two_quotes))))
